Equal clip range crashing in Hue Correct & RGB Curves Nodes #70317

Closed
opened 2019-09-28 10:54:33 +02:00 by Junkflex · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Equal clip values within the 'Hue Correct' and 'RGB Curves' nodes of the compositor causes crash.

Exact steps for others to reproduce the error
No other proceeding actions other than enabling nodes in compositor and adding a Hue Correct or RGB Curves node.
Entering equal clip values for minimum and maximum X and/or Y will crash the program when moving handles.
Of course it is not something a user would desire but a response other than crashing would be appropriate.

Hue Correct Equal Range Clip Crash.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Equal clip values within the 'Hue Correct' and 'RGB Curves' nodes of the compositor causes crash. **Exact steps for others to reproduce the error** No other proceeding actions other than enabling nodes in compositor and adding a Hue Correct or RGB Curves node. Entering equal clip values for minimum and maximum X and/or Y will crash the program when moving handles. Of course it is not something a user would desire but a response other than crashing would be appropriate. [Hue Correct Equal Range Clip Crash.mp4](https://archive.blender.org/developer/F7778379/Hue_Correct_Equal_Range_Clip_Crash.mp4)
Author

Added subscriber: @Junkflex

Added subscriber: @Junkflex
Junkflex changed title from Hue correct - equal clip range crashing to Equal clip range crashing in Hue Correct & RGB Curves Nodes 2019-09-28 13:00:13 +02:00
Germano Cavalcante self-assigned this 2019-10-01 17:05:56 +02:00

This issue was referenced by 825a93d7cd

This issue was referenced by 825a93d7cddd0fb28431f12b0927b45b8eca4125

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70317
No description provided.