Fix T70317: Equal clip range crashing in Hue Correct & RGB Curves Nodes

It takes many changes to support the drawing of zero-sized curves.
Best skip these cases to avoid crash.
Blender 2.79 had no support either.